[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/BattleManager.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Music/music_leonell_cassio_rocks_n_mud_ft_krista_marina.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scripts/BattleCamera.gd" type="Script" id=3]
[ext_resource path="res://Shaders/Grid.gdshader" type="Shader" id=4]
[ext_resource path="res://Prefabs/PlayerMoon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prefabs/Rei.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/UI/HealthHud.png" type="Texture" id=10]
[ext_resource path="res://BattleScene.tres" type="StyleBox" id=11]
[ext_resource path="res://new_styleboxflat.tres" type="StyleBox" id=12]

[sub_resource type="Gradient" id=72]
offsets = PoolRealArray( 0, 0.484848, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.675781, 0.599228, 0.599228, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=73]
gradient = SubResource( 72 )

[sub_resource type="ProceduralSky" id=71]

[sub_resource type="Environment" id=74]
background_mode = 4
background_sky = SubResource( 71 )
background_canvas_max_layer = 2
tonemap_mode = 1
auto_exposure_scale = 0.6
auto_exposure_max_luma = 2.0
dof_blur_far_transition = 0.07
dof_blur_near_quality = 2
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/4 = true
glow_levels/6 = true
glow_levels/7 = true
glow_bloom = 0.01
glow_blend_mode = 0
glow_bicubic_upscale = true
glow_high_quality = true
adjustment_brightness = 0.9
adjustment_contrast = 1.21
adjustment_saturation = 0.79
adjustment_color_correction = SubResource( 73 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 128, 16 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color( 1, 0.243137, 0.0941176, 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 128, 16 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxEmpty" id=76]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/size = Vector2( 10, 20 )
shader_param/cell_size = 64.0
shader_param/cell_spacing = 1.0
shader_param/line_color = Color( 0.270588, 0.270588, 0.270588, 1 )
shader_param/texture_offset_scale = Vector2( 0.2, 0.2 )
shader_param/texture_offset_height = 0.0
shader_param/texture_offset_time_scale = 0.05
shader_param/sine_time_scale = 1.0
shader_param/sine_offset_scale = Vector2( 128, 128 )
shader_param/sine_wave_size = 32.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 4 )
shader_param/size = Vector2( 10, 20 )
shader_param/cell_size = 64.0
shader_param/cell_spacing = 1.0
shader_param/line_color = Color( 1, 0.843137, 0.654902, 1 )
shader_param/texture_offset_scale = Vector2( 0.2, 0.2 )
shader_param/texture_offset_height = 0.0
shader_param/texture_offset_time_scale = 0.05
shader_param/sine_time_scale = 1.2
shader_param/sine_offset_scale = Vector2( 268, 268 )
shader_param/sine_wave_size = 16.0

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.540909, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.16
emission_shape = 2
emission_box_extents = Vector3( 240, 136, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 12.21
linear_accel_random = 1.0
radial_accel = 100.0
radial_accel_random = 1.0
tangential_accel = 15.27
tangential_accel_random = 1.0
damping = 19.85
damping_random = 1.0
scale = 2.0
scale_random = 1.0
color = Color( 1.2, 1.2, 2, 1 )
color_ramp = SubResource( 5 )
hue_variation_random = 1.0

[sub_resource type="Animation" id=75]
resource_name = "MusicTrack"
length = 237.19
tracks/0/type = "method"
tracks/0/path = NodePath("Rei/Rei_Model")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 17, 237.19 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "battle_start"
}, {
"args": [  ],
"method": "music_ended"
} ]
}

[node name="BattleManager" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 48.0 ]
}
gameover_scene = "res://Scenes/BattleScene.tscn"
win_scene = "res://Scenes/Last_Scene.tscn"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 74 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Health" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarBG" type="ProgressBar" parent="UI/Health"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
margin_right = 127.0
margin_bottom = 14.0
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 8 )
max_value = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarFG" type="ProgressBar" parent="UI/Health"]
margin_right = 127.0
margin_bottom = 14.0
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 8 )
max_value = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossHealth" type="Control" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="UI/BossHealth"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -30.0
margin_right = 32.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarBG" type="ProgressBar" parent="UI/BossHealth/Control"]
modulate = Color( 1.11, 1.08, 1.08, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -1.0
margin_top = -4.0
margin_right = 126.0
margin_bottom = 4.0
custom_styles/fg = ExtResource( 12 )
custom_styles/bg = SubResource( 76 )
max_value = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarFG" type="ProgressBar" parent="UI/BossHealth/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -1.0
margin_top = -4.0
margin_right = 126.0
margin_bottom = 4.0
custom_styles/fg = ExtResource( 11 )
custom_styles/bg = SubResource( 76 )
max_value = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="UI/BossHealth"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -30.0
margin_right = 32.0
margin_bottom = 10.0
rect_scale = Vector2( -1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarBG" type="ProgressBar" parent="UI/BossHealth/Control2"]
modulate = Color( 1.11, 1.08, 1.08, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -4.0
margin_right = 128.0
margin_bottom = 4.0
custom_styles/fg = ExtResource( 12 )
custom_styles/bg = SubResource( 76 )
max_value = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarFG" type="ProgressBar" parent="UI/BossHealth/Control2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -4.0
margin_right = 128.0
margin_bottom = 4.0
custom_styles/fg = ExtResource( 11 )
custom_styles/bg = SubResource( 76 )
max_value = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -448.0
margin_top = -256.0
margin_right = 917.0
margin_bottom = 525.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG2" type="Panel" parent="."]
material = SubResource( 2 )
margin_left = -448.0
margin_top = -256.0
margin_right = 917.0
margin_bottom = 525.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG3" type="Panel" parent="BG2"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerMoon" parent="." instance=ExtResource( 5 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 240, 144 )
current = true
script = ExtResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 240, 144 )
amount = 200
lifetime = 3.0
process_material = SubResource( 6 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "Music"

[node name="Rei" type="Node2D" parent="."]
position = Vector2( 240, 112 )

[node name="Rei_Model" parent="Rei" instance=ExtResource( 7 )]
position = Vector2( 0, 48 )
z_index = 4
arm_rotation_speed = 0.85

[node name="ArmParemt" type="Node2D" parent="Rei"]
position = Vector2( -240, -144 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "MusicTrack"
anims/MusicTrack = SubResource( 75 )
